--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -95,3 +95,50 @@ td:first-child {
   top: 0;
   background-color: #3d2c23;
 }
+
+.game-result {
+  background-color: #3d2c23;
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  overflow-y: auto;
+  box-shadow: 0 4px 0px rgba(0, 0, 0, 0.5);
+}
+
+.game-result-text {
+  margin: auto;
+  width: 90%;
+}
+
+.game-result h2 {
+  text-align: center;
+  color: #f0e6d2;
+}
+
+.game-result p {
+  color: #f0e6d2;
+}
+
+.game-result .sidebar-button {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  background-color: #a66a53;
+  color: #f0e6d2;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  text-align: left;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 4px 0px rgba(0, 0, 0, 0.2); /* Добавленная тень */
+}
+
+.game-result .sidebar-button:hover {
+  background-color: #d17f5b;
+}
+
+.sidebar-button:disabled {
+  background-color: #ff0000;
+  cursor: not-allowed;
+}
